--- a/iframe1.html
+++ b/iframe1.html
@@ -9,10 +9,9 @@
 		<script type="text/javascript">
 			document.addEventListener("DOMContentLoaded", function(){
 					var iframe = document.getElementById('iframe');
-					//iframe.setAttribute('src', 'iframe2.html');
-					setTimeout(function() { iframe.setAttribute('src', 'iframe2.html'), 3000});
+					iframe.setAttribute('src', 'iframe2.html');
 					//iframe.style.display = 'block';
-					iframe.style.display = 'block';
+					setTimeout(function() { iframe.style.display = 'block'; }, 3000);
 			});
 		</script>
 	</body>
